<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SignInActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:src="@drawable/left_arrow_purpal"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_frame"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:theme="@style/CustomTheme"
        app:cardElevation="@dimen/_15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Welcome"
                android:textAlignment="center"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_24dp" />

            <TextView
                android:id="@+id/txt_plz_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plz_login_to_continue"
                android:textAlignment="center"
                android:textColor="@color/colorPurpleLight"
                android:textSize="@dimen/_18dp" />

            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_heading"
                android:layout_marginTop="@dimen/_15dp"
                android:background="@drawable/bg_et_rounded_blue_border"
                android:gravity="center"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="12"
                android:padding="@dimen/_12dp"
                android:singleLine="true"
                android:textColor="@color/text_purpal"
                android:textColorHint="@color/text_purpal" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_heading"
                android:layout_marginTop="@dimen/_12dp"
                android:background="@drawable/bg_et_rounded_blue_border"
                android:gravity="center"
                android:hint="@string/password"
                android:padding="14dp"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/text_purpal"
                android:textColorHint="@color/text_purpal" />

            <TextView
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_privacy"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_et_rounded_blue_border"
                android:backgroundTint="@color/colorPurple"
                android:gravity="center"
                android:paddingTop="@dimen/_10dp"
                android:paddingBottom="@dimen/_10dp"
                android:text="@string/Signin"
                android:textColor="@color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/dont_have_an_account_plz_signup"
                android:textColor="@color/text_purpal"
                android:textSize="16sp" />

        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prgress"
            android:visibility="gone"
           android:layout_gravity="center"
            android:layout_centerInParent="true"/>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>