<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_dark"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/sign_in_user_icon" />

                <TextView
                    android:id="@+id/tv_your_all_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/your_all_set"
                    android:textColor="@color/colorPurple"
                    android:textSize="@dimen/_24dp" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12dp"
                    android:gravity="center"
                    android:text="@string/application_successfully_completed"
                    android:textColor="@color/colorPurpleLight"
                    android:textSize="@dimen/_16dp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_25dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_et_rounded_blue_border"
            android:backgroundTint="@color/colorPurple"
            android:gravity="center|center_vertical"
            android:padding="12dp"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16dp" />

    </LinearLayout>


</RelativeLayout>